Children move with parent partition when parent is moved. CTRL and drag with left mouse to create a new partition (still buggy). Movement of partiton added but disabled (moving the partition causes it to get stuck to the cursor, not detecting release when moving the partition.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -174,6 +174,7 @@ body {
 	top: 0;
 	overflow: hidden;
 	border: 4px solid #14B4C8;
+	background-color: rgba(40, 200, 220, 0.25);
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
